<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>ctake-playground</artifactId>
        <groupId>org.example</groupId>
        <version>1.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>negex</artifactId>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <opennlp.version>1.9.4</opennlp.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.apache.uima</groupId>
            <artifactId>uimaj-core</artifactId>
            <version>${uima.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.uima</groupId>
            <artifactId>uimafit-core</artifactId>
            <version>${uima.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.ctakes</groupId>
            <artifactId>ctakes-core</artifactId>
            <version>${ctakes.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.apache.ctakes</groupId>
                    <artifactId>ctakes-type-system</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.apache.ctakes</groupId>
            <artifactId>ctakes-context-tokenizer</artifactId>
            <version>${ctakes.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.apache.ctakes</groupId>
                    <artifactId>ctakes-type-system</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.apache.ctakes</groupId>
            <artifactId>ctakes-pos-tagger</artifactId>
            <version>${ctakes.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.apache.ctakes</groupId>
                    <artifactId>ctakes-type-system</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.apache.ctakes</groupId>
            <artifactId>ctakes-chunker</artifactId>
            <version>${ctakes.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.apache.ctakes</groupId>
                    <artifactId>ctakes-type-system</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.apache.ctakes</groupId>
            <artifactId>ctakes-dictionary-lookup-fast</artifactId>
            <version>${ctakes.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.apache.ctakes</groupId>
                    <artifactId>ctakes-type-system</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.apache.ctakes</groupId>
            <artifactId>ctakes-lvg</artifactId>
            <version>${ctakes.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.apache.ctakes</groupId>
                    <artifactId>ctakes-type-system</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.example</groupId>
            <artifactId>ctakes-type-system</artifactId>
            <version>${version}</version>
        </dependency>
        <dependency>
            <groupId>commons-beanutils</groupId>
            <artifactId>commons-beanutils</artifactId>
            <version>${commons-beanutils.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.opennlp</groupId>
            <artifactId>opennlp-tools</artifactId>
            <version>${opennlp.version}</version>
        </dependency>
    </dependencies>

</project>